--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.2"
+    "recharts": "^2.15.2",
+    "axios": "^1.8.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
